# Portfolium

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  convert_csv.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  example_import.csv  mkdocs.yml
api/: .coveragerc  .env.test  Dockerfile  README.md  alembic-local.ps1  alembic.ini  celerybeat-schedule  pyproject.toml  pytest.ini  test_candidates.py  test_pick_best.py
api/alembic/: env.py
api/alembic/versions/: 20251031_1520-23573f948586_initial_schema.py  20251031_1600-initial_create_schema.py  20251103_1400-add_asset_metadata_overrides.py  20251105_1623-add_user_preferred_language.py  20251106_1407-3ee4be59b21e_add_performance_indexes_for_positions.py  20251110_1200-add_dashboard_layouts.py  20251112_1600_performance_indexes.py  (+14 more)
api/app/: __init__.py  auth.py  celery_app.py  config.py  db.py  dependencies.py  errors.py  main.py  models.py  redis_client.py  schemas.py  schemas_public.py  version.py
api/tests/: conftest.py  factories.py  manual_test_csv_validation.py  test_api_integration.py  test_ath_atl_notifications.py  test_calendar_accuracy.py  test_csv_import_validation.py  test_currency_service.py  test_daily_change_notifications.py  test_dashboard_layouts.py  test_dividend_validation.py  test_examples.py  test_insights_service.py  test_metrics.py  test_notification_thresholds.py  test_prices.py  test_pricing_service.py  test_risk_metrics_calculation.py  test_sharpe_fix.py  test_sold_assets_per_portfolio.py  test_splits_and_metrics.py  utils.py
db/: Dockerfile
(+381 files in other folders)
